--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -10,5 +10,5 @@
 </div>
 
 <div class="row mb-auto">
-    <p>Student name meu sssste: @Model.StudentName</p>
+    <p>Student name meu teste de alteração: @Model.StudentName</p>
 </div>
